# vmanager

./: FEATURES.md  MANIFEST.in  README.md  config.py  connection_manager.py  dialog.css  firmware_manager.py  libvirt_error_handler.py  libvirt_utils.py  network_manager.py  pyproject.toml  snapshot.css  storage_manager.py  tui.css  tui.py  utils.py  vm_actions.py  vm_info.py  vm_queries.py  vm_service.py  vmanager.css  vmanager.py  vmanager_cmd.py  vmcard.css  vmcard.py  vmcard_dialog.py  webconsole_manager.py  xmlutil.py
docs/: index.html  media.html  style.css
modals/: bulk_modals.py  config_modal.py  connection_modals.py  disk_pool_modals.py  log_modal.py  migration_modals.py  network_modals.py  select_server_modals.py  server_modals.py  server_prefs_modals.py  utils_modals.py  virtiofs_modals.py  vmanager_modals.py  vmanager_select_server_modals.py  vmanager_virsh_modals.py  vmanager_vmdetails_modals.py  vmdetails_modals.py
src/: vmcard.css
src/vmanager/: config.py  constants.py  dialog.css  events.py  firmware_manager.py  libvirt_utils.py  network_manager.py  storage_manager.py  utils.py  vm_actions.py  vm_cache.py  vm_queries.py  vm_service.py  vmanager.css  vmanager.py  vmanager_cmd.py  vmcard.css  vmcard.py  webconsole_manager.py
src/vmanager/modals/: base_modals.py  config_modal.py  cpu_mem_pc_modals.py  disk_pool_modals.py  howto_ssh_modal.py  input_modals.py  log_modal.py  migration_modals.py  network_modals.py  select_server_modals.py  server_modals.py  server_prefs_modals.py  utils_modals.py  vmdetails_modals.py  xml_modals.py
